# Operating-Systems-Challenges

a2_c_refresher_bsn3g9-master/allocation/: CMakeLists.txt
a2_c_refresher_bsn3g9-master/allocation/src/: allocation.c
a2_c_refresher_bsn3g9-master/arrays/: CMakeLists.txt
a2_c_refresher_bsn3g9-master/arrays/include/: .arrays.h.swp
a2_c_refresher_bsn3g9-master/arrays/src/: .arrays.c.swp  arrays.c
a2_c_refresher_bsn3g9-master/bits/: CMakeLists.txt
a2_c_refresher_bsn3g9-master/bits/src/: .bitmap.c.swp  bitmap.c
a2_c_refresher_bsn3g9-master/debug/: CMakeLists.txt
a2_c_refresher_bsn3g9-master/debug/src/: debug.c
a2_c_refresher_bsn3g9-master/error_handling/: CMakeLists.txt
a2_c_refresher_bsn3g9-master/error_handling/src/: error_handling.c
a2_c_refresher_bsn3g9-master/strings/: CMakeLists.txt
a2_c_refresher_bsn3g9-master/strings/src/: sstring.c
a2_c_refresher_bsn3g9-master/structures/: CMakeLists.txt
a2_c_refresher_bsn3g9-master/structures/src/: .structures.c.swp  .strutures.c.swp  structures.c
a2_c_refresher_bsn3g9-master/system_programming/: CMakeLists.txt
a2_c_refresher_bsn3g9-master/system_programming/src/: sys_prog.c
a3.5-threading_bsn3g9-main/: ImageFile.h  Makefile  README.md  Student.c  Student.h  test.c
a3_process_scheduling.sp2025_bsn3g9-main/: CMakeLists.txt  readme.md
a3_process_scheduling.sp2025_bsn3g9-main/src/: analysis.c  process_scheduling.c
a3_process_scheduling.sp2025_bsn3g9-main/test/: tests.cpp
a4_block_store_bsn3g9-master/: CMakeLists.txt
a4_block_store_bsn3g9-master/include/: block_store.h
a4_block_store_bsn3g9-master/src/: block_store.c
a5_fs2021_bsn3g9-master/: CMakeLists.txt
a5_fs2021_bsn3g9-master/include/: FS.h  FS_M1.h
a5_fs2021_bsn3g9-master/src/: .FS.c.swp  FS.c  FS_M1.c  FS_M2.c
a5_fs2021_bsn3g9-master/test/: tests_M2.cpp
